# Fast-care

./: README.md  pyproject.toml
fastcare/: db.sqlite3  manage.py
fastcare/api/: admin.py  models.py  serializers.py  urls.py  views.py
fastcare/api/migrations/: 0001_initial.py  0002_findbyclothes_gender_findbyid_gender.py  0002_user_hospital.py  0003_auto_20220412_1137.py  0004_rename_findbyclothes_findbyclothe.py
fastcare/fastcare/: asgi.py  settings.py  urls.py  wsgi.py
